# flexusd-smartbch

./: .gitignore  README.md  brownie-config.yml  generate-address.py  generate-wallet.py  pyproject.toml
abi/: FlexUSD.json  FlexUSDImplV2.json  LibraryLock.json  Ownable.json  flexUSDImplV0.json
contracts/: Address.sol  Context.sol  FlexUSD.sol  FlexUSDImplV0.sol  FlexUSDImplV2.sol  FlexUSDStorage.sol  IERC20.sol  LibraryLock.sol  Ownable.sol  SafeMath.sol  flexUSDImplV0.sol  flexUSDImplV1.sol
contracts/old/: FlexUSDImplMock.sol  LibraryLock.sol  flexUSD.sol  flexUSDImplV0.sol  flexUSDImplV1.sol  flexUSDStorage.sol
flattened/: FlexUSD.sol  FlexUSDImplV0.sol  FlexUSDImplV2.sol
flattened/flattened_2022-02-17/: FlexUSD.sol
outdated/: fUSD.sol  fUSDStorage.sol
scripts/: deploy_flexusd.py  flatten.py  generate_abi.py  initialize.py  transferOwnership.py
tests/: __init__.py  accounts.py  approvals.py  balances.py  blacklist.py  deployments.py  ownership.py  transactions.py  upgrades.py  upgrades_v2.py
tests/v0/: __init__.py  approvals.py  blacklist.py  deployments.py  ownership.py  transactions.py
tests/v1/: __init__.py  approvals.py  blacklist.py  deployments.py  ownership.py  transactions.py
tests/v2/: __init__.py  approvals.py  blacklist.py  deployments.py  ownership.py  transactions.py
